--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
            
             <div class="secImg3">
                 <img src=https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png> 
-                 <video src=https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v autoplay loop></video>
+                 <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" autoplay loop ></video>
                  </div>
                  </section>
         <div class="separation3"></div>
